--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ bleach==6.2.0
 certifi==2025.10.5
 cffi==2.0.0
 charset-normalizer==3.4.4
+colorama==0.4.6
 comm==0.2.3
 debugpy==1.8.17
 decorator==5.2.1
@@ -19,6 +20,8 @@ exceptiongroup==1.3.0
 executing==2.2.1
 fastjsonschema==2.21.2
 fqdn==1.5.1
+gitdb==4.0.12
+GitPython==3.1.45
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -38,6 +41,7 @@ jupyter==1.1.1
 jupyter-console==6.6.3
 jupyter-events==0.12.0
 jupyter-lsp==2.3.0
+jupyter-server-mathjax==0.2.6
 jupyter_client==8.6.3
 jupyter_core==5.8.1
 jupyter_server==2.17.0
@@ -52,6 +56,7 @@ matplotlib-inline==0.2.1
 mistune==3.1.4
 nbclient==0.10.2
 nbconvert==7.16.6
+nbdime==4.0.2
 nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook==7.4.7
@@ -84,6 +89,7 @@ rfc3987-syntax==1.1.0
 rpds-py==0.27.1
 Send2Trash==1.8.3
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.8
 stack-data==0.6.3
