--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ fastjsonschema==2.21.2
 fqdn==1.5.1
 gitdb==4.0.12
 GitPython==3.1.45
+greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -69,12 +70,14 @@ pandocfilters==1.5.1
 parso==0.8.5
 pexpect==4.9.0
 platformdirs==4.4.0
+playwright==1.55.0
 prometheus_client==0.23.1
 prompt_toolkit==3.0.52
 psutil==7.1.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.23
+pyee==13.0.0
 Pygments==2.19.2
 python-dateutil==2.9.0.post0
 python-json-logger==4.0.0
